add UsevSAN option, for people don't care about vSAN feature and use NFS only and more focus on networking features

--- a/deploy.yml
+++ b/deploy.yml
@@ -36,6 +36,8 @@
 - import_playbook: playbooks/configureNestedEsxi.yml
 - import_playbook: playbooks/createVds.yml
 - import_playbook: playbooks/configureVsan.yml
+  when:
+    - Deploy.Setting.UsevSAN|default(true)
 - import_playbook: playbooks/license_vSphere.yml
 
 
