--- a/config_sample.yml
+++ b/config_sample.yml
@@ -37,6 +37,7 @@ Deploy:
     IPv4: true                                            # IPv4 - All components are configured with IPv4 addresses.
     IPv6: false                                           # IPv6 - Make sure your environment (i.e. Ansible control station, DNS, etc.) are all configured with IPv6 else the installation will fail.  IPv6 transit also required between Ansible constrol station and DNS Server.
     UseNFS: false                                         # UseNFS - Set to "True" if you want to connect an existing NFS datstore to the nested ESXi hosts. NFS datstore details are configured the under "Common.NFS" section.
+    UsevSAN: False                                        # UsevSAN - Set to "True" if you want to use vSAN, else nested ESXi will only use NFS for storage, in this case UseNFS must be set to "True"
     UseDNS: true                                          # UseDNS - Use DNS name resolution within the Pod (recommended). This requires that either "Deploy.Product.DNSServer" is set to "True" (recommended) or that a pre-existing, pre-configured DNS server is available.
     EnableSSH: true                                       # EnableSSH - Allow SSH access to the deployed components.
   Software:
@@ -537,25 +538,25 @@ Nested_Clusters:
 Nested_ESXi:
   HardwareSettings:
     Management:
-      CPU: 5
-      CoresPerSocket: 5
+      CPU: 4
+      CoresPerSocket: 4
       Memory: 16384
       BootDiskSize: 8
       vSAN:
         CacheSize: 20                                                                   # CacheSize and CapacitySize MUST be different values.  Normally, CacheSize is smaller than CapacitySize.
         CapacitySize: 180                                                               # CacheSize and CapacitySize MUST be different values.  Normally, CapacitySize is larger than CacheSize.
     Compute-A:
-      CPU: 8
-      CoresPerSocket: 8
-      Memory: 32768
+      CPU: 4
+      CoresPerSocket: 4
+      Memory: 16384
       BootDiskSize: 8
       vSAN:
         CacheSize: 20                                                                   # CacheSize and CapacitySize MUST be different values.  Normally, CacheSize is smaller than CapacitySize.
         CapacitySize: 180                                                               # CacheSize and CapacitySize MUST be different values.  Normally, CapacitySize is larger than CacheSize.
     Edge:
-      CPU: 8
-      CoresPerSocket: 8
-      Memory: 65536
+      CPU: 4
+      CoresPerSocket: 4
+      Memory: 16384
       BootDiskSize: 8
       vSAN:
         CacheSize: 20                                                                   # CacheSize and CapacitySize MUST be different values.  Normally, CacheSize is smaller than CapacitySize.
